# tadoku_stats

./: Cargo.toml  README.md
src/: main.rs  ranking.html  userpage.html
