[package]
name = "tadoku_stats"
version = "0.2.1"
authors = ["Peter Maydell <pmaydell@chiark.greenend.org.uk>"]

[dependencies]
select = "~0"
regex = "~0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tempfile = "~2"
clap = "~2.26.0"
reqwest = "~0"
isolang = "0.2"
maplit = "1.0"
lazy_static = "1.0"
